Fixed hover and spacing for mobile portfolio items

--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ hr.medium {
 
 .portfolio-items {
   margin: 20px 0 0 0;
-  padding: 20px;
+  padding: 0;
   list-style: none;
   display: block;
   text-align: center;
@@ -116,19 +116,19 @@ hr.medium {
   transition: all 0.4s ease-in-out;
 }
 
-.portfolio-item__container:hover {
+.portfolio-item__container:hover, .portfolio-item__container:active {
   box-shadow: 
     inset 0 0 0 200px rgba(0, 105, 163, 0.9),
     inset 0 0 0 16px rgba(112,181,198,0.0),
     0 1px 2px rgba(0,0,0,0.1);
 }
 
-.portfolio-item__container:hover .portfolio-item__info-container {
+.portfolio-item__container:hover .portfolio-item__info-container, .portfolio-item__container:active .portfolio-item__info-container {
   opacity: 1;
   transform: scale(1);  
 }
 
-.portfolio-item__container:hover {
+.portfolio-item__container:hover, .portfolio-item__container:active {
   opacity: 1;
   transform: scale(1);  
 }
